--- a/src/app/feedback/feedback.component.html
+++ b/src/app/feedback/feedback.component.html
@@ -39,6 +39,7 @@
     <div class="container mt-4">
       <div class="row">
         <div class="col-md-12">
+          <h2>Reviews by Previous Users</h2>
           <div class="center-table">
             <table class="table table-bordered">
               <thead>
