--- a/src/app/archives/archives.component.html
+++ b/src/app/archives/archives.component.html
@@ -5,12 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Archives</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="archives.component.css">
 </head>
 <body>
     <app-navbar></app-navbar>
-
-    <div class="container mt-4">
-        <h2>Search History:</h2>
+    <div class="container mt-4 center-button">
+        <button class="btn btn-danger" (click)="clearArchives()">Clear Archives</button>
+    </div>
+    <div class="container">
         <table class="table">
             <thead>
                 <tr>
