--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -25,7 +25,9 @@
                 <option value="option1">All Reviews</option>
                 <option value="option2">Betting Apps</option>
                 <option value="option3">Loan Apps</option>
-                <option value="option4">Mobile Banking Apps</option>
+                <option value="option4">Telecommunication Apps</option>
+                <option value="option5">Mobile Banking Apps</option>
+
               </select>
               
             </div>
