--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -1,70 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Landing Page</title>
-    <link rel="stylesheet" href="landing-page.component.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
 </head>
 <body>
-  <app-navbar></app-navbar>
+  <div class="container">
+    <h2>Scraping Configuration</h2>
+    <div>
+      <label for="searchQuery">Search Query:</label>
+      <input id="searchQuery" type="text" [(ngModel)]="searchQuery" />
+    </div>
+    <div>
+      <label for="numReviews">Number of Reviews:</label>
+      <input id="numReviews" type="number" [(ngModel)]="numReviews" />
+    </div>
+    <button (click)="startScraping()">Start Scraping</button>
+    
+    <!-- Display the scraping message -->
+    <div *ngIf="scrapingMessage">
+      {{ scrapingMessage }}
+    </div>
+    <!-- Display the positive review percentage if available -->
+<div *ngIf="positiveReviewPercentage !== null">
+  <p>Positive Review Percentage: {{ positiveReviewPercentage.toFixed(2) }}%</p>
+</div>
 
-      <div class="section mt-4">
-        <h1>Top Brands Ranking</h1>
-        <h4>Kenyan Brands with best online reviews</h4>
-      </div>
-      <div class="container mt-4">
-        <div class="row">
-          <div class="col-md-6 offset-md-3">
-            <div class="input-group mb-3">
-              <div class="input-group-prepend">
-                <label class="input-group-text" for="search-dropdown">Categories</label>
-              </div>
-              <select class="form-select" id="search-dropdown" [(ngModel)]="selectedOption" (change)="fetchData(selectedOption)">
-                <option value="option1">All Reviews</option>
-                <option value="option2">Betting Apps</option>
-                <option value="option3">Loan Apps</option>
-                <option value="option4">Telecommunication Apps</option>
-                <option value="option5">Mobile Banking Apps</option>
-
-              </select>
-              
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="container mt-0">
-        <div class="row">
-          <div class="col-md-12">
-            <div class="center-table">
-              <table id="myTable" class="table table-bordered">
-                <thead>
-                  <tr>
-                    <th>Rank</th>
-                    <th>Brand</th>
-                    <th>Positive Review Percentage</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr *ngFor="let item of tableData; let i = index">
-                    <td>{{ i + 1 }}</td>
-                    <td>{{ item.Alias }}</td>
-                    <td>{{ item.Positive_Review_Percentage }}</td>
-                  </tr>
-                </tbody>
-              </table>
-            </div>
-          </div>
-        </div>
-      </div>
-      
-
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
- 
-      
+  </div>
 </body>
 </html>
